# learn-cpp

./: .clang-format  CLAUDE.md  CMakeLists.txt
src/: CMakeLists.txt  hello.cc  lambda.cc  smart_pointer.cc
